--- a/.github/workflows/web_deploy.yml
+++ b/.github/workflows/web_deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: 🛠️ Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.4'
+          channel: stable
 
       - name: 📦 Install dependencies
         run: flutter pub get
