--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   # Icons im Cupertino-Stil (optional)
   cupertino_icons: ^1.0.8
 
+  lottie: ^3.3.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -38,6 +40,8 @@ flutter:
   assets:
     - assets/images/
     - assets/images/sketches/
+    - assets/animations/trophy.json
+    - assets/animations/firework.json
 
   fonts:
     - family: Montserrat
