Aktualisieren von build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           tag_name: ${{ steps.prep_tag.outputs.tag }}
           name: "Release ${{ steps.prep_tag.outputs.tag }}"
-          body_path: ./changelog.md  # <- changelog wird als Beschreibung gesetzt
+          body_path: ./CHANGELOG.md  # <- changelog wird als Beschreibung gesetzt
           files: build/app/outputs/flutter-apk/app-release.apk
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
