--- a/.github/workflows/web_deploy.yml
+++ b/.github/workflows/web_deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: 🚀 Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          github_token: ${{ secrets.GIT_TOKEN }}
+          github_token: ${{ secrets.GIThäHUB_TOKEN }}
           publish_dir: build/web
           # Die folgenden Optionen sorgen für "saubere" Deployments:
           force_orphan: true
