--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,3 @@
-# .github/workflows/build.yml
-
 name: 📦 Build APK & Release
 
 on:
@@ -22,41 +20,43 @@ jobs:
         with:
           flutter-version: '3.32.4'
 
-      - name: 🧪 Check Flutter & Dart version
-        run: |
-          flutter --version
-          dart --version
+      - name: 🧰 Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
 
-      - name: 📦 Install Dependencies
+      - name: 📦 Install Node Dependencies (standard-version)
+        run: npm install
+
+      - name: 🧾 Generate CHANGELOG.md & bump version
+        run: npx standard-version
+
+      - name: 🏷️ Extract new version from package.json
+        id: extract_tag
+        run: |
+          echo "version=$(node -p \"require('./package.json').version\")" >> $GITHUB_OUTPUT
+
+      - name: 🔄 Update pubspec.yaml version
+        run: |
+          version=${{ steps.extract_tag.outputs.version }}
+          sed -i "s/^version: .*/version: $version+1/" pubspec.yaml
+
+      - name: 🔁 Git Commit + Tag + Push (CHANGELOG + pubspec.yaml)
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+          git add CHANGELOG.md pubspec.yaml package.json package-lock.json
+          git commit -m "🔖 Release v${{ steps.extract_tag.outputs.version }}"
+          git tag "v${{ steps.extract_tag.outputs.version }}"
+          git push origin main --follow-tags
+
+      - name: 📦 Install Flutter dependencies
         run: flutter pub get
 
       - name: 🎨 Generate Android App Icon
         run: flutter pub run flutter_launcher_icons:main -f pubspec.yaml
-
-      - name: 🔄 Upgrade all packages
-        run: flutter pub upgrade
-
-      - name: 📝 Prepare release tag
-        id: prep_tag
-        run: |
-          version=$(grep version pubspec.yaml | head -n 1 | awk '{print $2}' | cut -d '+' -f1)
-          tag="v$version"
-          echo "tag=$tag" >> $GITHUB_OUTPUT
-
-      - name: 📝 Commit updated pubspec.lock and tag if changed
-        run: |
-          if git diff --quiet pubspec.lock; then
-            echo "📦 Keine Änderungen an pubspec.lock"
-          else
-            echo "📦 Änderungen an pubspec.lock erkannt – wird committet"
-            git config user.name "github-actions"
-            git config user.email "github-actions@github.com"
-            git add pubspec.lock
-            git commit -m "⬆️ Auto-Update pubspec.lock für Release ${{ steps.prep_tag.outputs.tag }}"
-            git tag ${{ steps.prep_tag.outputs.tag }}
-            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:main
-            git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} ${{ steps.prep_tag.outputs.tag }}
-          fi
 
       - name: 🏗️ Build Release APK
         run: flutter build apk --release
@@ -64,8 +64,8 @@ jobs:
       - name: 🗂 Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ steps.prep_tag.outputs.tag }}
-          name: "Release ${{ steps.prep_tag.outputs.tag }}"
+          tag_name: v${{ steps.extract_tag.outputs.version }}
+          name: Release v${{ steps.extract_tag.outputs.version }}
           body_path: ./CHANGELOG.md
           files: build/app/outputs/flutter-apk/app-release.apk
         env:
