--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,68 @@
-# Miscellaneous
-*.class
-*.log
-*.pyc
-*.swp
-.DS_Store
-.atom/
-.build/
-.buildlog/
-.history
-.svn/
-.swiftpm/
-migrate_working_dir/
-sachkundenachweis_app.code-workspace
+# ===================================================
+# 🌐 Flutter / Dart Ignore
+# ===================================================
 
-# IntelliJ related
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+build/
+**/build/
+
+# Symbolication & Obfuscation
+app.*.symbols
+app.*.map.json
+
+# API-Doku (optional, falls mit dartdoc generiert)
+doc/api/
+
+# ===================================================
+# 🛠 IDEs & Editor-Dateien
+# ===================================================
+
+# IntelliJ / Android Studio
 *.iml
 *.ipr
 *.iws
 .idea/
 
-# The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
-# is commented out by default.
+# VS Code
 .vscode/
 
-# Flutter/Dart/Pub related
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.dart_tool/
-.flutter-plugins
-.flutter-plugins-dependencies
-.pub-cache/
-.pub/
-/build/
+# Xcode / iOS
+*.xcworkspace
+*.xcuserstate
+*.xcuserdata/
+ios/Flutter/.last_build_id
 
-# Symbolication related
-app.*.symbols
+# Android Gradle
+**/android/local.properties
+**/android/.gradle/
+.gradle/
+android/.gradle/
+android/app/release
+android/app/debug
+android/app/profile
 
-# Obfuscation related
-app.*.map.json
+# Swift Package Manager
+.swiftpm/
 
-# Android Studio will place build artifacts here
-/android/app/debug
-/android/app/profile
-/android/app/release
+# ===================================================
+# 🪪 Persönliche oder System-Dateien
+# ===================================================
+
+*.swp
+*.log
+*.pyc
+*.class
+.DS_Store
+.buildlog/
+.history
+.svn/
+.atom/
+migrate_working_dir/
+
+# VS Code Workspace
+sachkundenachweis_app.code-workspace
