--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,23 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<!-- Speicherort: android/app/src/main/AndroidManifest.xml -->
+<!-- Beschreibung: Konfiguriert die Android-App-Einstellungen für die Sachkundenachweis-App. -->
+<!-- Definiert die Hauptanwendung, Aktivitäten, Themen und Berechtigungen. -->
+<!-- Der Code ist plattformübergreifend kompatibel und folgt Best Practices für Android. -->
+
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.sachkundenachweis_app"> <!-- Eindeutige Package-ID -->
+
+    <!-- Berechtigungen (falls erforderlich, z. B. für Bilder oder Internet) -->
+    <!-- <uses-permission android:name="android.permission.INTERNET" /> -->
+    <!-- Entfernen Sie den Kommentar, wenn die App Internetzugriff benötigt -->
+
     <application
         android:label="Sachkundenachweis"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher"> <!-- Siehe Hinweis unten -->
+        android:icon="@mipmap/ic_launcher"
+        android:allowBackup="true" 
+        android:supportsRtl="true" 
+        android:theme="@style/AppTheme">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -13,23 +28,25 @@
             android:hardwareAccelerated="true"
             android:windowSoftInputMode="adjustResize">
             <meta-data
-              android:name="io.flutter.embedding.android.NormalTheme"
-              android:resource="@style/NormalTheme"
-              />
+                android:name="io.flutter.embedding.android.NormalTheme"
+                android:resource="@style/NormalTheme" />
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <!-- Publisher: Release von Mildman1848 -->
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
     </application>
+
+    <!-- Queries für Textverarbeitung (optional, nur wenn benötigt) -->
     <queries>
         <intent>
-            <action android:name="android.intent.action.PROCESS_TEXT"/>
-            <data android:mimeType="text/plain"/>
+            <action android:name="android.intent.action.PROCESS_TEXT" />
+            <data android:mimeType="text/plain" />
         </intent>
     </queries>
 </manifest>
