Fixing android app

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <!-- Beschreibung: Konfiguriert die Android-App-Einstellungen für die Sachkundenachweis-App. -->
 <!-- Definiert die Hauptanwendung, Aktivitäten, Themen und Berechtigungen. -->
 <!-- Der Code ist plattformübergreifend kompatibel und folgt Best Practices für Android. -->
+<!-- Hinweis: Das package-Attribut wurde entfernt, da es in neueren Android-Versionen nicht mehr unterstützt wird. Der Namespace wird stattdessen in build.gradle.kts definiert (Best Practice: Vermeidung von Manifest-Fehlern). -->
 
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.sachkundenachweis_app"> <!-- Eindeutige Package-ID -->
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Berechtigungen (falls erforderlich, z. B. für Bilder oder Internet) -->
     <!-- <uses-permission android:name="android.permission.INTERNET" /> -->
